--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Science, Spirituality & Global Impact – Glimpses from Harvard Medical School | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Success with a 75% win rate trading strategy?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2283,7 +2283,7 @@
                     <div class="video-info">
                         <h3>Crafting a Legacy: My Lifetime Pizza Recipe</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 13, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5138,7 +5138,7 @@
                         <div class="video-info">
                             <h3>Success with a 75% win rate trading strategy?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Science, Spirituality & Global Impact – Glimpses from Harvard Medical School | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8801,7 +8801,7 @@
                         <div class="video-info">
                             <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8977,7 +8977,7 @@
                         <div class="video-info">
                             <h3>Crafting a Legacy: My Lifetime Pizza Recipe</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 13, 2025</div>
                         </div>
                     </a>
                 </div>
